  * added support for Google reader API elements
  * added support for Google data format
  * added better support for copyright information
  * added method to allow feeds and feed items to override lazy parsing
  * added configuration setting to override lazy parsing
  * added serialization feature to allow preparsing with FeedUpdater
  * fixed some issues with identifying the correct base uri
=== FeedTools 0.2.26
  * added support for retarded, ugly Radio redirects
  * improved autodiscovery support
  * fixed lazy evaluation issue
=== FeedTools 0.2.25
  * fixed self reference href bug
  * fixed primary link assignment heuristic
  * link rel's now default to 'alternate' for atom feeds
  * better handling of language attributes
  * better support for threaded applications
  * generated rss 2.0 now includes author, managingEditor, webMaster elements
  * improved handling of author elements
  * improved handling of http timeouts
  * fixed issue with relative paths in the location header on http redirection
  * monkey patches now work with Ruby 1.8.4's version of REXML
  * REXML monkey patches moved into their own file
=== FeedTools 0.2.24
  * fixed autodiscovery bugs
  * updated autodiscovery to handle relative uris
  * added per feed configuration
  * rewrote http retrieval code
  * supports authenticated http proxies
  * supports basic http auth
  * fixed relative url resolution issues
  * corrected db schema files to match migration file
  * fixed bug in the save method
  * fixed some major http bugs
  * updated dependancies
  * no longer causes problems with frozen rails
=== FeedTools 0.2.23
  * autodiscovery implemented
  * now knows a title from a hole in the ground
  * now resolves relative urls when possible
  * changed default table name to "cached_feeds" to avoid name collisions
  * schema now uses "href" instead of "url"
  * feed cache is set to nil by default now
  * both summary and content elements are generated now
  * now supports proxies