@@ -9,6 +9,9 @@
   * added configuration setting to override lazy parsing
   * added serialization feature to allow preparsing with FeedUpdater
   * fixed some issues with identifying the correct base uri
+  * added config path method to the database feed cache
+  * added default time to live configuration variable
+  * no longer causes problems with Mongrel's monkey patch
 === FeedTools 0.2.26
   * added support for retarded, ugly Radio redirects
   * improved autodiscovery support
